--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "apollo-datasource-rest": "^0.9.7",
     "apollo-server-express": "^2.19.1",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
